# knowledge-gap-finder

./: .gitignore  README.md  api.py  main.py  pipeline.py  pyproject.toml
data/cache/: bm25_index.pkl  clusters.pkl  embeddings.json  indexed_papers.pkl
frontend/: index.html
src/knowledge_gap_finder/: clusterer.py  embedder.py  explainer.py  fetcher.py  indexer.py  retriever.py  scorer.py
